--- a/cfg/Custom_Clash_Full.ini
+++ b/cfg/Custom_Clash_Full.ini
@@ -72,6 +72,7 @@ ruleset=🚀 手动选择,[]GEOSITE,gfw
 ruleset=💬 即时通讯,[]GEOIP,telegram,no-resolve
 ruleset=🌐 社交媒体,[]GEOIP,twitter,no-resolve
 ruleset=🌐 社交媒体,[]GEOIP,facebook,no-resolve
+ruleset=💬 即时通讯,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ruleset=🇬 谷歌服务,[]GEOIP,google,no-resolve
 ruleset=🎥 Netflix,[]GEOIP,netflix,no-resolve
 ;由于 OpenClash 使用的大陆白名单收录不全，此处留有 geosite:cn 作为国内域名兜底
