--- a/cfg/Custom_Clash_Full.ini
+++ b/cfg/Custom_Clash_Full.ini
@@ -26,7 +26,7 @@ ruleset=🎯 全球直连,clash-classic:https://testingcf.jsdelivr.net/gh/Aether
 ruleset=🚀 手动选择,clash-domain:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Domain.yaml,28800
 ruleset=🚀 手动选择,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Classical_IP.yaml,28800
 ;谷歌在国内可用的域名直连
-ruleset=🎯 全球直连,[]GEOSITE,google-cn
+ruleset=📢 谷歌FCM,[]GEOSITE,google-cn
 ;国内游戏域名直连
 ruleset=🎯 全球直连,[]GEOSITE,category-games@cn
 ;Steam 下载 CDN 直连
